ABM Add feature added | Database  uploaded

--- a/pages/abm/modPeliculas.html
+++ b/pages/abm/modPeliculas.html
@@ -29,19 +29,19 @@
     <div class="format-table">
             <div>ID</div>
             <div>Titulo</div>
-            <div>Duracion</div>
+            <div>Año</div>
+            <div>Duración</div>
             <div>Calificación</div>
-            <div>Genero</div>
-            <div>Pais Origen</div>
-            <div>Actores</div>
+            <div>Género</div>
             <div>Poster</div>
+            <div>Editar</div>
             <div>Eliminar</div>
     </div>
     <!--
     El siguiente contenedor va a borrar su contenido para pintar
     los datos de la base
     -->
-    <div class="format-table">
+    <div class="format-table" id="containerMoviesDB">
         <div>ID</div>
         <div>ID</div>
         <div>Fecha de la Venta</div>
@@ -55,6 +55,7 @@
     
     </main>
     <script src="../../scripts/apiQuery.js"></script>
+    <script src="../../scripts/serverQuery.js"></script>
 </body>
 
 </html>
