ABM View Movies Feature Added

--- a/pages/abm/modPeliculas.html
+++ b/pages/abm/modPeliculas.html
@@ -12,7 +12,7 @@
     <header>
         <span>ADMINISTRACIÓN PELICULAS</span>
     </header>
-    <main>
+    <main id="containerMoviesDB">
         <h1 class="titles">INGRESAR PELICULAS</h1>
         
         <form id="form">
@@ -41,17 +41,6 @@
     El siguiente contenedor va a borrar su contenido para pintar
     los datos de la base
     -->
-    <div class="format-table" id="containerMoviesDB">
-        <div>ID</div>
-        <div>ID</div>
-        <div>Fecha de la Venta</div>
-        <div>Numero Función</div>
-        <div>Numero de Sala</div>
-        <div>Tipo de Entrada</div>
-        <div>Pelicula</div>
-        <div>Cantidad Entradas</div>
-        <div>Pelicula</div>
-    </div>
     
     </main>
     <script src="../../scripts/apiQuery.js"></script>
