--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="resources/img/login_form.jpg" alt="">
             <form action="php/login.php" method="POST">
                 <label for="Email">Correo Electrónico</label>
-                <input type="email" placeholder="Email">
+                <input type="email" placeholder="Email" name="email">
                 <label for="Pass">Contraseña</label>
-                <input type="pass" placeholder="Contraseña">
+                <input type="pass" placeholder="Contraseña" name="contra">
                 <input type="submit" value="Ingresar" id="submit-button">
             </form>
         </div>
